added mobile et computer classes

--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,10 @@ figcaption .little-text {
     font-size: 80%;
 }
 
+.mobile{
+    display: none;
+}
+
 /* ANIMATIONS */
 
 @keyframes anim-logo50 {
