--- a/css/mobile.css
+++ b/css/mobile.css
@@ -226,3 +226,7 @@ figure * {
     height: 1.6em;
     filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
 }
+
+.computer{
+    display: none;
+}
