--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ a:hover {
 .spotify-icon{
     height: 1.2em;
     transition: filter .25s;
+    vertical-align: middle;
 }
 .spotify-icon:hover{
     filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
