--- a/css/style.css
+++ b/css/style.css
@@ -77,15 +77,19 @@ a:hover {
     /* https://codepen.io/sosuke/pen/Pjoqqp */
     filter: invert(75%) sepia(100%) saturate(357%) hue-rotate(108deg) brightness(93%) contrast(93%);
 }
-.spotify-icon{
+
+.spotify-icon {
     height: 1.2em;
     transition: filter .25s;
 }
-.spotify-icon:hover{
+
+.spotify-icon:hover {
     filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
 }
+
 .header-nav a img {
     height: 32px;
+    margin: .2em;
 }
 
 .nav-text {
@@ -96,6 +100,10 @@ a:hover {
 .header-nav .dropdown-title:hover {
     border-top-left-radius: .5em;
     border-bottom-left-radius: .5em;
+}
+
+.header-nav a:hover,
+.header-nav .dropdown-title:hover {
     color: var(--accent_color_medium);
     padding: -1px 0;
     background-color: var(--accent_color_ultra_light);
@@ -517,7 +525,7 @@ figcaption .little-text {
     font-size: 80%;
 }
 
-.mobile{
+.mobile {
     display: none;
 }
 
