--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,24 @@ a:hover {
 .spotify-icon:hover {
     filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
 }
+.yt-icon {
+    width: 1.6em;
+    transition: filter .25s;
+}
+
+.yt-icon:hover {
+      /* https://codepen.io/sosuke/pen/Pjoqqp */
+      filter: invert(9%) sepia(100%) saturate(7486%) hue-rotate(360deg) brightness(105%) contrast(107%);
+}
+.wiki-icon {
+    width: 1.6em;
+    transition: filter .25s;
+}
+
+.wiki-icon:hover {
+       /* https://codepen.io/sosuke/pen/Pjoqqp */
+ filter: invert(43%) sepia(0%) saturate(310%) hue-rotate(251deg) brightness(88%) contrast(83%);
+}
 
 .header-nav a img {
     height: 32px;
