--- a/css/mobile.css
+++ b/css/mobile.css
@@ -226,6 +226,13 @@ figure * {
     height: 1.6em;
     filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
 }
+.yt-icon{
+    height: 1.6em;
+    filter: invert(9%) sepia(100%) saturate(7486%) hue-rotate(360deg) brightness(105%) contrast(107%);
+}
+.wiki-icon{
+    height: 1.6em;
+}
 
 .computer{
     display: none;
