--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,15 @@ body {
     text-shadow: 0 1px 0 var(--bg80);
 }
 
-a {
+a,
+.multi-link>span {
     color: var(--accent_color_dark);
     text-decoration: none;
     font-weight: bold;
 }
 
-a:hover {
+a:hover,
+.multi-link:hover>span {
     color: var(--accent_color_medium);
 }
 
@@ -86,23 +88,25 @@ a:hover {
 .spotify-icon:hover {
     filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
 }
+
 .yt-icon {
     width: 1.6em;
     transition: filter .25s;
 }
 
 .yt-icon:hover {
-      /* https://codepen.io/sosuke/pen/Pjoqqp */
-      filter: invert(9%) sepia(100%) saturate(7486%) hue-rotate(360deg) brightness(105%) contrast(107%);
+    /* https://codepen.io/sosuke/pen/Pjoqqp */
+    filter: invert(9%) sepia(100%) saturate(7486%) hue-rotate(360deg) brightness(105%) contrast(107%);
 }
+
 .wiki-icon {
     width: 1.6em;
     transition: filter .25s;
 }
 
 .wiki-icon:hover {
-       /* https://codepen.io/sosuke/pen/Pjoqqp */
- filter: invert(43%) sepia(0%) saturate(310%) hue-rotate(251deg) brightness(88%) contrast(83%);
+    /* https://codepen.io/sosuke/pen/Pjoqqp */
+    filter: invert(43%) sepia(0%) saturate(310%) hue-rotate(251deg) brightness(88%) contrast(83%);
 }
 
 .header-nav a img {
@@ -379,17 +383,15 @@ figure * {
     border: var(--fontBase) solid 1px;
     border-bottom: none;
     margin: 0 1px 1px 1px;
+    z-index: 3;
 }
+
 .multi-link {
     margin: 1px;
     position: relative;
     display: inline-block;
     padding: .25em;
-}
-
-.multi-link>span {
-    text-decoration: solid var(--accent_color_medium) underline;
-    font-weight: bold;
+    min-width: 100px;
 }
 
 .multi-link>div {
@@ -407,7 +409,9 @@ figure * {
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: .25em;
     z-index: 1;
+    text-align: center;
 }
+
 .multi-link>div>a {
     display: inline-block;
     width: max-content;
