--- a/css/mobile.css
+++ b/css/mobile.css
@@ -44,6 +44,10 @@ body {
     background-image: url("../images/musicBackgrounds/mobile/rock.jpg");
 }
 
+.alt-bg {
+    background-image: url("../images/musicBackgrounds/mobile/alt.jpg");
+}
+
 a {
     color: var(--accent_color_medium);
     text-decoration: none;
@@ -222,18 +226,21 @@ figure * {
     bottom: 1ex;
     font-size: 80%;
 }
-.spotify-icon{
+
+.spotify-icon {
     height: 1.6em;
     filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
 }
-.yt-icon{
+
+.yt-icon {
     height: 1.6em;
     filter: invert(9%) sepia(100%) saturate(7486%) hue-rotate(360deg) brightness(105%) contrast(107%);
 }
-.wiki-icon{
+
+.wiki-icon {
     height: 1.6em;
 }
 
-.computer{
+.computer {
     display: none;
 }
