follow up to c8fedc2
https://github.com/oxypomme/PT19_20/commit/c8fedc2aa09b52e029f35a19ad6d62a71199c66a

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -230,15 +230,18 @@ figure * {
 .spotify-icon {
     height: 1.6em;
     filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
+    vertical-align: middle;
 }
 
 .yt-icon {
     height: 1.6em;
     filter: invert(9%) sepia(100%) saturate(7486%) hue-rotate(360deg) brightness(105%) contrast(107%);
+    vertical-align: middle;
 }
 
 .wiki-icon {
     height: 1.6em;
+    vertical-align: middle;
 }
 
 .computer {
