--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,9 @@ figure * {
 }
 
 .multi-link {
+    text-align: left;
+    text-indent: 0;
+    margin: 0 0 0 0;
     position: relative;
     display: inline-block;
     text-align: center;
@@ -398,8 +401,7 @@ figure * {
     border-bottom: none;
     margin: 0 1px 1px 1px;
     min-width: 6em;
-    margin: 1px;
-    padding: .25em;
+    padding: 0 .25em .25em .25em;
     z-index: 3;
 }
 
@@ -444,7 +446,8 @@ article {
     padding: 0px 10px;
 }
 
-.paragraph :not(.multi-link *), p {
+.paragraph,
+p {
     text-align: justify;
     text-indent: 2em;
     margin: auto auto 16px auto;
