--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,9 @@ aside.navbar {
     z-index: 10;
     transition: left .5s cubic-bezier(0.075, 0.82, 0.2, 1);
 }
-
+aside.navbar div{
+    height: 100%;
+}
 aside.navbar iframe {
     border: 0;
     overflow: hidden;
