--- a/css/style.css
+++ b/css/style.css
@@ -258,9 +258,11 @@ aside.navbar {
     z-index: 10;
     transition: left .5s cubic-bezier(0.075, 0.82, 0.2, 1);
 }
-aside.navbar div{
+
+aside.navbar div {
     height: 100%;
 }
+
 aside.navbar iframe {
     border: 0;
     overflow: hidden;
@@ -316,8 +318,9 @@ main {
 .rock-bg {
     background-image: url("../images/musicBackgrounds/rock.jpg");
 }
+
 .pop-bg {
-    background-image: url("../images/musicBackgrounds/pop honrizontal.jpg");
+    background-image: url("../images/musicBackgrounds/pop.jpg");
 }
 
 .rap-bg {
@@ -398,6 +401,7 @@ figure * {
     margin: 0 1em;
     flex: 1;
 }
+
 .yt-integ>div>div>div {
     position: relative;
     margin: 0 auto;
