--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ main {
     background-image: url("../images/musicBackgrounds/rock.jpg");
 }
 .pop-bg {
-    background-image: url("../images/musicBackgrounds/pop honrizontal.jpg");
+    background-image: url("../images/musicBackgrounds/pop.jpg");
 }
 
 .rap-bg {
