--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ main {
     background-image: url("../images/musicBackgrounds/rock.jpg");
 }
 .pop-bg {
-    background-image: url("../images/musicBackgrounds/pop honrizontal.jpg");
+    background-image: url("../images/musicBackgrounds/pop3.jpg");
 }
 
 .rap-bg {
