--- a/css/style.css
+++ b/css/style.css
@@ -572,9 +572,9 @@ li:not(.header-nav *) {
 }
 
 .source {
-    float: right;
+    display: block;
+    text-align: right;
     font-style: italic;
-    margin-top: -20px;
     color: var(--accent_color_dark);
 }
 
