--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ figure * {
 }
 
 .spotify-integ iframe {
-    max-width: 300px;
+    max-width: 100%;
     height: 80px;
     margin: 0;
     padding: 0;
