--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,7 @@ figure * {
 
 .yt-integ>div>div>div {
     position: relative;
+    max-width: 25vw;
     margin: 0 auto;
     padding-top: 56.25%;
 }
