--- a/css/style.css
+++ b/css/style.css
@@ -433,7 +433,8 @@ figure * {
     z-index: 3;
 }
 
-.multi-link>div {
+.multi-link>div,
+.multi-link>.ml-content {
     margin-top: 1.3em 0 0 0;
     display: none;
     left: -1px;
@@ -448,14 +449,16 @@ figure * {
     text-align: center;
 }
 
-.multi-link>div>a {
+.multi-link>div>a,
+.multi-link>.ml-content>a {
     display: inline-block;
     width: max-content;
     margin: 0 auto;
     flex: 1;
 }
 
-.multi-link:hover>div {
+.multi-link:hover>div,
+.multi-link:hover>.ml-content {
     min-width: 6em;
     display: flex;
     justify-content: center;
