fixed yt integ not responding

--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,7 @@ figure * {
     position: absolute;
     top: 0;
     bottom: 0;
+    pointer-events: initial;
     left: 0;
     right: 0;
     width: 100%;
